--- a/index.html
+++ b/index.html
@@ -162,6 +162,6 @@
         </div>
     </section>
     
-    <script src="/script.js"></script>
+    <script src="/Portfolio/script.js"></script>
 </body>
 </html>
