--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
         <h2 class="project-title" class="section-inner">My Projects</h2>
         <div class="project-container">
             <div class="project-card">
-                <img src="/Portfolio/images and documents/weather-app.png" alt="Weather Forecast Application" class="project-img" style="width: 250px; height:120px;">
+                <img src="images and documents/weather-app.png" alt="Weather Forecast Application" class="project-img" style="width: 250px; height:120px;">
                 <p><strong style="text-align: center;">Weather Forecast Application:</strong><br>A responsive web app providing real-time weather updates like temperature, humidity, and conditions using API integration. Built with HTML, CSS, and JavaScript.</p>
             </div>
             <div class="project-card">
-                <img src="/Portfolio/images and documents/quiz-app.png" alt="Quiz App" class="project-img" style="width: 250px; height:120px;">
+                <img src="images and documents/quiz-app.png" alt="Quiz App" class="project-img" style="width: 250px; height:120px;">
                 <p><strong style="text-align: center;">Quiz App:</strong><br> An interactive quiz platform developed with HTML, CSS, and JavaScript that provides instant feedback on multiple-choice questions for an engaging user experience.</p>
             </div>
             <div class="project-card">
-                <img src="/Portfolio/images and documents/todo-list.png" alt="To-Do List with Local Storage" class="project-img" style="width: 250px; height:120px;">
+                <img src="images and documents/todo-list.png" alt="To-Do List with Local Storage" class="project-img" style="width: 250px; height:120px;">
                 <p><strong style="text-align: center;">To-Do List:</strong><br> A task management tool using JavaScript and Local Storage, allowing users to add, edit, delete, and mark tasks as complete. Clean UI with persistent storage.</p>
             </div>
         </div>
