--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="nav-right">
         <a href="https://www.linkedin.com/in/madansankaravel-v-1439a41ab" class="nav-items"><img src="https://cdn-icons-png.flaticon.com/128/2504/2504923.png" width="30px" height="30px"></img> LinkedIn</a>
         <a href="https://github.com/MADAN-16?tab=repositories"class="nav-items"><img src="https://cdn-icons-png.flaticon.com/128/25/25231.png" width="30px" height="30px"></img> Github</a>
-        <a href="/Portfolio/images and documents/RESUME CORRECTED AND FINAL on 02.04.2025.pdf" class="nav-items" target="_blank"><button id="btn">Resume</button></a>
+        <a href="images and documents/RESUME CORRECTED AND FINAL on 02.04.2025.pdf" class="nav-items" target="_blank"><button id="btn">Resume</button></a>
         </div>  
         </div>
     </nav>
@@ -95,18 +95,18 @@
             <div class="inbox">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS95Z4YVYbM6SAVHtlkuUqaFnyVFoQG54p-7A&s" style="width: 250px; height:120px;">
                 <p>As part of my ongoing professional development, I completed the Artificial Intelligence Primer Certification offered by Infosys Springboard, receiving my certificate on September 1, 2023. This certification has provided me with essential introductory knowledge in Artificial Intelligence, forming a solid base for my future endeavors in this dynamic field. I am eager to expand my skills and apply my understanding of AI principles to develop innovative solutions.</p>
-                <a href="/Portfolio/images and documents/Artificial Intelligence Primer Certification.pdf" target="_blank"><img src="/Portfolio/images and documents/document.png" alt="certificate" width="30px" height="30px"  ></a>
+                <a href="images and documents/Artificial Intelligence Primer Certification.pdf" target="_blank"><img src="images and documents/document.png" alt="certificate" width="30px" height="30px"  ></a>
             </div>
             <div class="inbox">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcXNu0BhTulCJ_3Uu4cpmy1DZ1Zdk0pi68Wg&s" style="width: 250px; height:120px;">
                 <p>I successfully completed the National Competence & Employability Test (NCET) on April 8, 2025, earning a Certificate of Competency. This assessment was designed to evaluate my employability quotient, measuring my understanding & application of knowledge and skills relevant to the professional environment.  I achieved a total percentage of 76.67% on my first attempt, which, according to the NCET grading system, reflects a 'Excellent' level of competence and resulted in an A+ grade.</p>
-                <a href="/Portfolio/images and documents/Attempt_1_NCET_Certificate.pdf" target="_blank"><img src="/Portfolio/images and documents/document.png" alt="certificate" width="30px" height="30px" ></a>
+                <a href="images and documents/Attempt_1_NCET_Certificate.pdf" target="_blank"><img src="images and documents/document.png" alt="certificate" width="30px" height="30px" ></a>
             </div >
             <div class="inbox">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVUexEwEynSe5zsQLxumugjxrkHz_NuPMn6Uv6bkiv1DpYNpiSeh390e4&s" style="width: 250px; height:120px;">
                 <p>I successfully completed the Introduction to MongoDB for Students course on July 27, 2024. This course provided me with a foundational understanding of MongoDB, a popular NoSQL database. Through this learning experience, I gained knowledge of key MongoDB concepts, including database structure, data manipulation, and querying. This completion demonstrates my initiative in learning modern database technologies and my ability to acquire skills relevant to data management.</p>
-                <a href="/Portfolio/images and documents/FINAL MADANSANKARAVEL V Introduction to MongoDB for Students.pdf" target="_blank">
-                    <img src="/Portfolio/images and documents/document.png" alt="certificate" width="30px" height="30px" ></a>
+                <a href="images and documents/FINAL MADANSANKARAVEL V Introduction to MongoDB for Students.pdf" target="_blank">
+                    <img src="images and documents/document.png" alt="certificate" width="30px" height="30px" ></a>
             </div>
         </div>
 
